--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "circular-json": "^0.5.9",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "terser-webpack-plugin": "^3.0.7",
     "webpack-cli": "^3.3.5"
   },
   "devDependencies": {
@@ -27,6 +30,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
