--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,16 @@
+// {
+//     'presets': ['@babel/preset-env']
+// }
+
 {
-    'presets': ['@babel/preset-env']
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "esmodules": true
+        }
+      }
+    ]
+  ]
 }
