--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,3 @@
-// {
-//     'presets': ['@babel/preset-env']
-// }
-
 {
-  "presets": [
-    [
-      "@babel/preset-env",
-      {
-        "targets": {
-          "esmodules": true
-        }
-      }
-    ]
-  ]
+  "presets": ["@babel/preset-env"]
 }
